--- a/style.css
+++ b/style.css
@@ -9,3 +9,9 @@ header{
     background-color: rosybrown;
     margin: 25px 15% 25px 15%;
 }
+nav{
+    background-color: sandybrown;
+    width: 70%;
+    margin: 25px 15% 25px 15%;
+    height: 20vh;
+}
