--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 header{
     width: 70%;
@@ -10,8 +11,44 @@ header{
     margin: 25px 15% 25px 15%;
 }
 nav{
-    background-color: sandybrown;
     width: 70%;
-    margin: 25px 15% 25px 15%;
     height: 20vh;
+    background-color: sandybrown;
+    margin: 25px 15% 25px 15%;
+}
+main{
+    width: 70%;
+    height: 50vh;
+    background-color: blue;
+    margin: 25px 15% 25px 15%;
+}
+.box1{
+    width: 100%;
+    height: 5vh;
+    background-color: rgb(0, 217, 255);
+    margin-bottom: 2vh;
+}
+.boxleft{
+    width: 15%;
+    height: calc(50vh - 5vh - 4vh);
+    background-color: rgb(0, 217, 255);
+    float: left;
+}
+.center{
+    width: calc(100% - 30% - 10%);
+    height: calc(50vh - 5vh - 4vh);
+    background-color: rgb(0, 217, 255);
+    margin: 0 5% 0 5%;
+    float: left;
+}
+.boxright{
+    width: 15%;
+    height: calc(50vh - 5vh - 4vh);
+    background-color: rgb(0, 217, 255);
+    float: left;
+}
+container::after{
+    content: "";
+    display: table;
+    clear: both;
 }
